# DDACS

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
config/: config_template.yaml
ddacs/: __init__.py  cli.py  config.py  core.py  croissant.py  ddacs_dataset.py  generators.py  h5_tools.py  metadata.py  pytorch.py  spec.py  streaming.py  utils.py  visualization.py
doc/: Deep Drawing and Cutting Simulations Dataset.md
docs/: cli.md  croissant.md  dataset.md  hdf5-structure.md  index.md  installation.md  macros.py  metadata.json  process-parameters.md  quickstart.md
docs/api/: croissant.md  generators.md  h5.md  index.md  pytorch.md  streaming.md  utils.md  visualization.md
docs/tutorials/: getting-started.md  index.md  loose-h5.md  pytorch.md  streaming.md  views.md  visualization.md
examples/: README.md  dataset_demo.ipynb  quick_start.py
notebooks/: 01_getting_started.ipynb  02_views.ipynb  03_pytorch.ipynb  04_visualization.ipynb  05_loose_h5.ipynb  06_streaming.ipynb  README.md  dataset_demo.ipynb
publish/: README.md  stage_teaser.sh
publish/huggingface/: card-header.md  upload.sh
publish/kaggle/: dataset-metadata.json  upload.sh
publish/kaggle/kernels/: build.py  push.sh
publish/teaser/: README.md
publish/zenodo/: metadata.json  upload.py
src/: __init__.py  base_fem_dataset.py  dataset.py  punch_dataset.py  simulation_dataset.py  utils.py
tests/: conftest.py  test_cli.py  test_core.py  test_croissant.py  test_degenerate_triangles.py  test_generators.py  test_h5_tools.py  test_installation.py  test_integration.py  test_point_cloud_extraction.py  test_pytorch.py  test_pytorch_rddac.py  test_streaming.py
