[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddacs"
version = "2.0.0"
description = "Deep Drawing and Cutting Simulations (DDACS) Dataset - Python interface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sebastian Baum", email = "Sebastian.Baum@ias.uni-stuttgart.de"}
]
keywords = [
    "machine-learning",
    "dataset",
    "simulation",
    "fem",
    "sheet-metal-forming",
    "deep-drawing",
    "hdf5",
    "materials-science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "h5py>=3.8.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    # CLI dependencies
    "requests>=2.28.0",
    "humanfriendly>=10.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
examples = [
    "torch>=2.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
dev = [
    "torch>=2.0.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.250",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.scripts]
ddacs = "ddacs.cli:main"

[project.urls]
Homepage = "https://github.com/BaumSebastian/Deep-Drawing-and-Cutting-Simulations-Dataset"
Repository = "https://github.com/BaumSebastian/Deep-Drawing-and-Cutting-Simulations-Dataset"
Issues = "https://github.com/BaumSebastian/Deep-Drawing-and-Cutting-Simulations-Dataset/issues"
Dataset = "https://darus.uni-stuttgart.de/dataset.xhtml?persistentId=doi:10.18419/DARUS-4801"
Paper = "https://www.matec-conferences.org/articles/matecconf/abs/2025/02/matecconf_iddrg2025_01090/matecconf_iddrg2025_01090.html"

[tool.setuptools.packages.find]
where = ["."]

# === Tool Configurations (for development) ===

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by black
