[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ddacs"
version = "3.1.1"
description = "Deep Drawing and Cutting Simulations (DDACS) Dataset - Python interface"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Sebastian Baum", email = "Baum.Sebastian@protonmail.com"}
]
keywords = [
    "machine-learning",
    "dataset",
    "simulation",
    "fem",
    "sheet-metal-forming",
    "deep-drawing",
    "hdf5",
    "materials-science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "h5py>=3.8.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.9.0",  # plt.cm.get_cmap was removed; uses plt.colormaps.get_cmap
    "seaborn>=0.13.0",
    # CLI dependencies
    "requests>=2.28.0",
    "humanfriendly>=10.0",
    "rich>=13.0.0",
    "scipy>=1.15.3",
    # Croissant manifest access
    "mlcroissant>=1.1.0",
    "pyvista>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "bumpver>=2023.1129",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-macros-plugin>=1.0.0",
    # pygments 2.20 + pymdownx.highlight mishandle filename=None in mkdocstrings'
    # source-code rendering. Pin until pymdownx-extensions ships a fix.
    "pygments<2.20",
]
torch = ["torch>=2.0"]

[project.scripts]
ddacs = "ddacs.cli:main"

[project.urls]
Repository = "https://github.com/BaumSebastian/DDACS"
Documentation = "https://ddacs.readthedocs.io"
Dataset = "https://darus.uni-stuttgart.de/dataset.xhtml?persistentId=doi:10.18419/DARUS-4801"
Paper = "https://www.matec-conferences.org/articles/matecconf/abs/2025/02/matecconf_iddrg2025_01090/matecconf_iddrg2025_01090.html"

[tool.setuptools.packages.find]
where = ["."]
include = ["ddacs", "ddacs.*"]

# === Tool Configurations (for development) ===

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by black

[tool.bumpver]
current_version = "3.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"ddacs/__init__.py" = ['__version__ = "{version}"']
"ddacs/cli.py" = ['__version__ = "{version}"']
